--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
 		<img src="4FC6DB13-C0B9-417D-83DB-73EFC3F5D239_1_105_c.jpeg" alt="Brûle" >
 		<h1>Coming...soon Le Wagon</h1>
+		<p>It's just awesome</p>
 	</div>
 </body>
 </html>
