centered image and tagline

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-		<img src="4FC6DB13-C0B9-417D-83DB-73EFC3F5D239_1_105_c.jpeg" alt="Brûle" >
+	<div id="container">
+		<img src="4FC6DB13-C0B9-417D-83DB-73EFC3F5D239_1_105_c.jpeg" alt="Brûle" id="logo">
 		<h1>Coming...soon Le Wagon</h1>
 		<p>It's just awesome</p>
 	</div>
